--- a/Pipfile
+++ b/Pipfile
@@ -6,12 +6,11 @@ name = "pypi"
 [packages]
 pydantic = "*"
 motor = "*"
-python-dotenv = "*"
 aiogram = "*"
 pydantic-settings = "*"
-openai = "*"
+google-generativeai = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "2.7"
+python_version = "3.11"
